objects/Global_Configuration_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BE_DAP_User_Check__c</fullName>
        <label>BE DAP User Check</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Orders_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billing Orders Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_Office_Multiplier__c</fullName>
        <label>Branch Office Multiplier</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Reconciliation_Lookback_Date__c</fullName>
        <label>Cloud Reconciliation Lookback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concurrent_Pricebook_Multiplier__c</fullName>
        <label>Concurrent Pricebook Multiplier</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hybrid_Accounts__c</fullName>
        <label>Hybrid Accounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Named_User_Pricing_Multiplier__c</fullName>
        <label>Named User Pricing Multiplier</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCC_Deal_Registration_Discount__c</fullName>
        <description>What it Does? Stores the Deal Registration Discount for PCC. 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>PCC Deal Registration Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PC_Deal_Registration_Discount__c</fullName>
        <description>What it Does? Stores the Deal Registration Discount for PC 
Downstream Impact? DDS 
Which department is owner? IT</description>
        <label>PC Deal Registration Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PEV_Third_Party_Cloud__c</fullName>
        <label>PEV Third Party Cloud</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PureConnect_Concurrent_Multiplier__c</fullName>
        <description>What it Does? Stores default value for PureConnect Cloud products
Downstream Impact? Impacts quoting tool
Which department is owner? Sales Ops</description>
        <label>PureConnect Concurrent Multiplier</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PureEngage_Cloud_Concurrent_Multiplier__c</fullName>
        <label>PureEngage Cloud Concurrent Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skip_Triggers_For_Users__c</fullName>
        <label>Skip Triggers For Users</label>
        <type>TextArea</type>
    </fields>
    <label>Global Configuration Settings</label>
</CustomObject>